--- a/css/styles.css
+++ b/css/styles.css
@@ -33,7 +33,7 @@ body {
   font-family: Roboto, sans-serif;
   font-size: 16px;
   line-height: 1.5;
-  letter-spacing: 0, 02em;
+  letter-spacing: 0.02em;
   color: var(--primary-text-color);
 }
 
@@ -73,7 +73,7 @@ header .container {
   height: 72px;
 }
 
-.section.header {
+.header {
   border-bottom: 1px solid #e7e9fc;
 }
 
@@ -86,7 +86,7 @@ header .container {
   font-style: ExtraBold;
   font-size: 18px;
   line-height: 1.33;
-  letter-spacing: 0, 03em;
+  letter-spacing: 0.03em;
   color: var(--accent-color);
   text-decoration: none;
   text-transform: uppercase;
@@ -157,13 +157,14 @@ header .logo-text {
 
 .hero.section {
   padding-top: 188px;
+  padding-bottom: 188px;
 }
 
 .hero-title {
   width: 494px;
-  font-size: Bold;
+  font-weight: 700;
   font-size: 56px;
-  line-height: 1, 07;
+  line-height: 1.07;
   color: var(--primary-bg-color);
   margin-left: auto;
   margin-right: auto;
@@ -173,14 +174,13 @@ header .logo-text {
 .hero-button {
   display: inline-block;
   padding: 16px 32px;
-  margin-bottom: 188px;
   min-width: 169px;
   font-family: Roboto;
   font-style: Medium;
   font-size: 16px;
   font-weight: 500;
-  line-height: 1, 5;
-  letter-spacing: 0, 04;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
   cursor: pointer;
   color: var(--primary-bg-color);
   background-color: var(--accent-color);
@@ -196,16 +196,16 @@ header .logo-text {
 /* sections */
 
 .section-title {
-  font-style: Bold;
+  font-weight: 700;
   font-size: 36px;
-  line-height: 41, 11;
+  line-height: 1.11;
   text-align: Center;
   color: var(--title-text-color);
 }
 
 /* adventages-section */
 
-.adventages-section .container {
+.section {
   padding-top: 120px;
   padding-bottom: 120px;
 }
@@ -215,7 +215,7 @@ header .logo-text {
   font-style: Medium;
   font-size: 20px;
   font-weight: 500;
-  line-height: 1, 2;
+  line-height: 1.2;
   color: var(--title-text-color);
 }
 
@@ -243,31 +243,31 @@ header .logo-text {
 
 /*about section  */
 
+.section-about {
+  padding-top: 0;
+}
+
 .about-title {
   margin-bottom: 72px;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
 }
 
 .about-list {
   display: flex;
   flex-wrap: wrap;
   gap: 24px;
-  margin-bottom: ;
 }
 
 .about-item {
   flex-basis: calc((100% - (24px * 2)) / 3);
 }
 
-.section-about .container {
-  padding-bottom: 120px;
-}
-
 /* team section */
-
-.section-team .container {
-  padding-top: 120px;
-  padding-bottom: 120px;
-}
 
 .team-title {
   margin-bottom: 72px;
@@ -275,6 +275,10 @@ header .logo-text {
 
 .section-team {
   background-color: #f4f4fd;
+}
+
+.desc-team {
+  margin: 32px 16px;
 }
 
 .team-list > li {
@@ -289,15 +293,11 @@ header .logo-text {
 }
 
 .team-list .item {
-  flex-basis: calc((100%- (24px * 3)) / 4);
+  flex-basis: calc((100% - (24px * 3)) / 4);
 }
 
 .card-title {
-  margin: 32px auto 8px;
-}
-
-.card-text {
-  margin-bottom: 32px;
+  margin-bottom: 8px;
 }
 
 /* portfolio  */
@@ -325,7 +325,7 @@ header .logo-text {
   border-color: var(--accent-color);
 }
 
-.section-gallery .container {
+.section-gallery {
   padding-top: 96px;
   padding-bottom: 120px;
 }
@@ -343,30 +343,27 @@ header .logo-text {
 
 /* portfolio section  */
 .list-cards .title {
-  font-style: medium;
   font-size: 20px;
   font-weight: 500;
-  line-height: 1, 2;
+  line-height: 1.2;
   text-align: Left;
   color: var(--title-text-color);
 }
 
 .gallery-title {
-  margin-top: 32px;
   margin-bottom: 8px;
-  margin-left: 16px;
 }
 
-.gallery-text {
-  margin-bottom: 32px;
-  margin-left: 16px;
+.desc-card {
+  padding-top: 32px;
+  padding-left: 16px;
+  padding-bottom: 32px;
+  border: 1px solid var(--list-item-border-color);
+  border-top: none;
 }
 
 .gallery-item {
-  border: 1px solid var(--list-item-border-color);
-  border-top: none;
   flex-basis: calc((100% - (24px * 2)) / 3);
-  margin: 0 -1px;
 }
 
 .list-cards {
@@ -391,7 +388,7 @@ footer .logo-text {
   color: #f4f4fd;
 }
 
-.footer .container {
+.footer {
   padding-top: 100px;
   padding-bottom: 100px;
 }
